2008-04-30  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c:
	(on_added): place correctly two swapped parameters when calling the
	user callback

2008-04-29  Philip Van Hoof <pvanhoof@gnome.org>

	* Extra robustness in TnyCamelSendQueue

2008-04-29  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-folder.c
	(transfer_message_to): preserve flags on transferring the message to
	a new folder.

	* libtinymail-camel/camel-lite/camel/camel-folder-summary.h:
	add some comments to flags enumeration to remember that it should be
	kept sync with flags masks.

2008-04-28  Jose Dapena Paz  <jdapena@igalia.com>, Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder.[ch]: new method find_msg_async. This makes find_msg synchronous
	version be deprecated now.

	* libtinymail-camel/tny-camel-folder.[ch],
	libtinymail/tny-merge-folder.[ch]:
	Added implementations of find_msg_async method.

2008-04-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Error reporting when sending a message without From, and a crash-fix
	about it too
	* Added tny_camel_transport_account_get_from and
	tny_camel_transport_account_set_from

	* This was a minor API change

2008-04-24  Philip Van Hoof <pvanhoof@gnome.org>

	* Removed all synchronous API usage in TnyCamelSendQueue

2008-04-24  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail/tny-merge-folder.c:
	(tny_merge_folder_update): keep the original value for
	check_duplicates that comes from the TnyFolderChange that comes from
	a child folder

2008-04-23  José Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c:
          (tny_camel_mime_part_is_attachment_default): consider as
          attachments parts that have filename= in disposition even
          if they're "inline".

2008-04-23  Philip Van Hoof <pvanhoof@gnome.org>

	* Reference count fix in TnyCamelSendQueue

2008-04-23  Jürg Billeter  <j@bitron.ch>
